sonarqube/sonar-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sonarqube
  name: sonarqube
spec:
  port:
    targetPort: 80-tcp
  wildcardPolicy: None
  to:
    kind: Service
    name: sonarqube
    weight: 100
  port:
    targetPort: 80-tcp
  wildcardPolicy: None
